# android-hw

./: README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/androidTest/java/org/gnuradio/grhardwareservice/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.conf  thrift.conf  volk_config
app/src/main/java/net/bastibl/grhardwareservice/: GrHardwareService.java  SdrHwSetupService.java
app/src/main/java/org/gnuradio/grhardwareservice/: GrHardwareService.java  SdrHwSetupReceiver.java  SdrHwSetupService.java
app/src/main/jni/: Android.mk  CMakeLists.txt  GrAndroid.mk  uhdlib.cpp
app/src/main/res/layout/: activity_sdr_hw_setup.xml  content_sdr_hw_setup.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_filter.xml  pref_headers.xml
app/src/test/java/org/gnuradio/grhardwareservice/: ExampleUnitTest.java
firmware/: usrp_b200_bl.img  usrp_b200_fw.hex
gradle/wrapper/: gradle-wrapper.properties
